--- a/second.html
+++ b/second.html
@@ -13,17 +13,17 @@
     <div class="container-flex">
         <div class="stickers-container">
             <div class="stickers">
-                <img src="/assets/img/planta.png" alt="" srcset="">
+                <img src="https://github.com/Jesus-Medina/Condicionales/blob/main/assets/img/planta.png?raw=true" alt="" srcset="">
                 <input class="input" id="number1" type="number" value="0" min="0">
             </div>
 
             <div class="stickers">
-                <img src="/assets/img/planta.png" alt="" srcset="">
+                <img src="https://github.com/Jesus-Medina/Condicionales/blob/main/assets/img/planta.png?raw=true" alt="" srcset="">
                 <input class="input" id="number2" type="number" value="0" min="0">
             </div>
 
             <div class="stickers">
-                <img src="/assets/img/planta.png" alt="" srcset="">
+                <img src="https://github.com/Jesus-Medina/Condicionales/blob/main/assets/img/planta.png?raw=true" alt="" srcset="">
                 <input class="input" id="number3" type="number" value="0" min="0">
             </div>
 
