--- a/third.html
+++ b/third.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style_3.css">
+    <link rel="icon" href="https://i.ibb.co/rFz41St/favicon-16x16.png" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
